# cppafricaexercises

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
1_time_task/: CMakeLists.txt  README.md  time_task  time_task.cpp
2_string_task/: CMakeLists.txt  README.md  string_task  string_task.cpp
3-boxes_task/: README.md
3_boxes_task/: CMakeLists.txt  boxes_task  boxes_task.cpp
4_dice_task/: CMakeLists.txt  README.md  kraatorPartE  kraator_partE.cpp  partA  partB  partB.cpp  partB.hpp  partB_lib.cpp  partC  partC.cpp  partC.hpp  partC_lib.cpp  partD  partD.cpp  partD.hpp  partD_lib.cpp  partE  partE.cpp  partE.hpp  partE_lib.cpp
5_streams_task/: CMakeLists.txt  README.md  algofunctions.hpp  functions.hpp  rangeviewversion  rangeviewversion.cpp  stdalgoversion  stdalgoversion.cpp  stdcinversion  stdcinversion.cpp  stream.cpp  streams
cmake/: CompileStandardLibraryHeaderUnits.cmake  StandardProjectSettings.cmake
task1/: CMakeLists.txt  task1
task2/: CMakeLists.txt  task2
task3/: CMakeLists.txt  kraatorclang  kraatorclang.cpp  kraatorsversion  kraatorsversion.cpp  task3
task4/: CMakeLists.txt  part1  part1.cpp  partA.cpp  partC.cpp
